# image-sorter

./: .gitignore  README.md  main.py  main_oop.py  project_structure.txt  pyproject.toml  requirements.txt
assets/architecture/: project_architecture.md
assets/diagrams/: class_diagrams.wsd  object_diagram.wsd  test.wsd
src/core/: create_image_metadata.py  get_image_dir.py
src/utils/: convert_coord_to_decimal_number.py  get_image_coords.py  get_location_from_gps.py  image_dir_path.py  set_logger.py
src/utils/classes/: ImageGPS.py  ImageMetadata.py  ImagePath.py  ImageTimestamp.py  Location.py
